# k8s-builder-and-installer-for-x86-single-node

./: .gitignore  Makefile  README.md  pyproject.toml
ansible/: playbook.yml
ansible/inventory/: hosts.yaml
ansible/playbooks/: deploy-control-plane.yml  deploy-etcd.yml
scripts/: build-cni-plugin.bash  build-containerd.bash  build-etcd.bash  build-k8s.bash  build-pause.bash  create-certificates.bash  create-service-file.bash  download-cni-plugin.bash  download-containerd.bash  download-crictl.bash  download-etcd.bash  download-k8s.bash  download-protoc.bash  download-runc.bash
